update and create some common scss

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -16,7 +16,7 @@
     "email": "Email",
     "Eve Holt": "Eve Holt",
     "eve.holt@reqres.in": "eve.holt@reqres.in",
-    "logout": "LogOut"
+    "logout": "LOG OUT"
   },
   "login": {
     "email": "Email",
