--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -26,6 +26,7 @@
     "register": "Register",
     "no account": "No Account",
     "register yourself": "Register YourSelf",
+    "forgot password": "forgot password",
     "login form": "Login Form",
     "login form text": "A login form is a user interface component that collects a username and password to authenticate users for accessing a system or application. It typically includes fields for input and a submit button."
   },
@@ -48,7 +49,9 @@
     "email": "Email",
     "submit": "Submit",
     "remembered": "Remembered your password?",
-    "login": "Login"
+    "login": "Login",
+    "emailRequired": "Email is required",
+    "emailInvalid": "Invalid email format"
   },
   "resetPassword": {
     "title": "Reset Password",
@@ -59,6 +62,8 @@
     "confirmPassword": "Confirm Password",
     "confirmPasswordPlaceholder": "Confirm Password",
     "submit": "Submit",
+    "passwordRequired": "New password is required",
+    "confirmPasswordRequired": "Confirm password is required",
     "passwordMismatch": "Passwords do not match"
   }
 }
